Compatibilidade com a 6.2