@@ -2,9 +2,11 @@ package org.kenos.idempiere.lbr.base.zk.editor;
 
 import java.util.logging.Level;
 
+import org.adempiere.webui.ClientInfo;
 import org.adempiere.webui.LayoutUtils;
 import org.adempiere.webui.event.DialogEvents;
 import org.adempiere.webui.event.ValueChangeEvent;
+import org.adempiere.webui.util.ZKUpdateUtil;
 import org.compiere.model.GridField;
 import org.compiere.model.MLocation;
 import org.compiere.model.MLocationLookup;
@@ -71,7 +73,7 @@ public class WLocationEditor extends org.adempiere.webui.editor.WLocationEditor
 		{
 			if (log.isLoggable(Level.CONFIG))	log.config("actionPerformed - " + m_value);
 			final WLocationDialog ld = new WLocationDialog(Msg.getMsg(Env.getCtx(), "Location"), m_value, gridField);
-			
+			final int oldValue = m_value == null ? 0 : m_value.getC_Location_ID();
 			ld.addEventListener (DialogEvents.ON_WINDOW_CLOSE,
 					new EventListener<Event>()
 					{
@@ -88,13 +90,8 @@ public class WLocationEditor extends org.adempiere.webui.editor.WLocationEditor
 							int C_Location_ID = 0;
 							if (m_value != null)
 								C_Location_ID = m_value.getC_Location_ID();
-							Integer ii = new Integer(C_Location_ID);
-							
-							// force Change - user does not realize that
-							// embedded object is already saved.
-							ValueChangeEvent valuechange = new ValueChangeEvent(WLocationEditor.this, getColumnName(), null, null);
-							fireValueChange(valuechange); // resets m_mLocation
-							if (C_Location_ID != 0)
+							Integer ii = Integer.valueOf(C_Location_ID);
+							if (C_Location_ID != 0 && oldValue == 0)
 							{
 								ValueChangeEvent vc = new ValueChangeEvent(WLocationEditor.this, getColumnName(), null, ii);
 								fireValueChange(vc);
@@ -115,6 +112,25 @@ public class WLocationEditor extends org.adempiere.webui.editor.WLocationEditor
 			});
 			ld.setTitle(null);
 			LayoutUtils.openPopupWindow(getComponent(), ld);
+            if (ClientInfo.isMobile())
+    		{
+            	ld.setAttribute("mobile.orientation", ClientInfo.get().orientation);
+    			ClientInfo.onClientInfo(ld, () -> {
+    				if (ld.getPage() != null) {
+    					String orientation = (String) ld.getAttribute("mobile.orientation");
+    					String newOrientation = ClientInfo.get().orientation;
+    					if (!newOrientation.equals(orientation)) {
+    						ld.setAttribute("mobile.orientation", newOrientation);
+    						
+    						ZKUpdateUtil.setCSSHeight(ld);
+    						ZKUpdateUtil.setCSSWidth(ld);    						
+    						ld.invalidate();
+    						LayoutUtils.openPopupWindow(getComponent(), ld, 100);
+    						
+    					}	    				
+    				}
+    			});
+    		}
 		}
 	}
 }	//	WLocationEditor
